# Monster_Melancholy

./: CMakeLists.txt  MHGcombat.h  MHGdataHandle.h  MHGguiHandle.h  MHGsounds.h  MHGtextDisplay.h  README.md  main.cpp  sha256.cpp  sha256.h
